# Win-Sayver

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_win_sayver.bat  setup.py
.github/: FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md  faq.md  installation.md  user-guide.md
win_sayver_poc/: Done.md  README.md  ai_client.py  ai_config_panel.py  ai_workflow.py  ai_workflow.py.bak  api_key_dialog.py  enhanced_prompt_templates.py  image_validator.py  image_widgets.py  link_validator.py  main_gui.py  main_gui_backup.py  mcp_link_finder.py  progress_tracker.py  prompt_engineer.py  requirements.txt  responsive_system_info.py  rich_text_editor.py  security_manager.py  specs_collector.py  system_data_manager.py  system_info_cards.py  system_info_formatter.py  test_basic.py  theme_manager.py  utils.py  windows_settings_urls.py  windows_settings_validator.py
